--- a/03-DirectoryStructures.Rmd
+++ b/03-DirectoryStructures.Rmd
@@ -1,5 +1,7 @@
 # Directory Structures
 
+*Last updated `r Sys.Date()`*
+
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity. 
 
 One major aspect of Open Science is ensuring transparency in the research process. This includes sharing files from all the steps of the research lifecycle (ie. a priori hypothesis, study design, data, analysis etc.) with others so that our research can be understood and replicated more easily. 
