--- a/05-FiguresAndTables.Rmd
+++ b/05-FiguresAndTables.Rmd
@@ -7,6 +7,8 @@ output:
 
 # Figures & Tables 
 
+*Last updated `r Sys.Date()`*
+
 These guidelines are based on current \"best practices\" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. They aim to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
 ## Tables
