--- a/09-Copyright.Rmd
+++ b/09-Copyright.Rmd
@@ -1,5 +1,7 @@
 # Copyright
 
+*Last updated `r Sys.Date()`*
+
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
 Learn more about copyright at UBC from the [UBC Learning Commons](https://learningcommons.ubc.ca/resource-guides/respect-copyright/).
