--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -4,14 +4,10 @@
 %
 \documentclass[
 ]{book}
-\title{Procedures and Guidelines}
-\author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2021-08-10}
-
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
-\usepackage{iftex}
-\ifPDFTeX
+\usepackage{ifxetex,ifluatex}
+\ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
   \usepackage[T1]{fontenc}
   \usepackage[utf8]{inputenc}
   \usepackage{textcomp} % provide euro and other symbols
@@ -75,11 +71,15 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{5}
-\ifLuaTeX
+\ifluatex
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
+
+\title{Procedures and Guidelines}
+\author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
+\date{2021-08-10}
 
 \begin{document}
 \maketitle
@@ -157,6 +157,8 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
+\emph{Last updated 2021-08-10}
+
 Well organized data is critical to transparency, reproducibility and generally maintaining one's sanity when conducting research. When we talk about file and data management we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
 So, when we talk about file and data management, broadly speaking, we're talking about
@@ -177,6 +179,8 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
+
+\emph{Last updated 2021-08-10}
 
 File naming isn't exactly fun, but it is crucially important to being able to organize, describe, and manage any kind of work, especially research. So let's talk about file naming conventions, and those that you'll be expected to use while in Biology at UBCO.
 
@@ -437,6 +441,8 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
+
+\emph{Last updated 2021-08-10}
 
 Now that we've covered naming conventions, let's pretend that you store everything on your computer in a single folder. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory (aka folder) structures. This helps us save precious time and improve our productivity.
 
@@ -832,6 +838,8 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
+\emph{Last updated 2021-08-10}
+
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When well organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
 In general, your data files should adhere to the principles of "tidy data". Tidy data is governed by the following 3 rules\footnote{See: Wickham, H. \& Grolemund, G. (2017). \href{https://r4ds.had.co.nz/tidy-data.html}{Tidy Data}. \emph{In R for Data Science}.}:
@@ -1025,6 +1033,8 @@ Ellison-lake & 3 & 1 \\
 
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
+
+\emph{Last updated 2021-08-10}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. They aim to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1248,6 +1258,8 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
+\emph{Last updated 2021-08-10}
+
 Markdown is a markup language that is used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on a principle of separating out content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text so any computer anywhere at anytime will be able to open them and consequently, we will be able to read them.
 
 Benefits of Markdown:
@@ -1257,14 +1269,14 @@ Benefits of Markdown:
 \item
   Simple and easy to learn
 \item
-  Can be used to geerate many different outputs formats (ie. pdf, html, docx etc.)
+  Can be used to generate many different outputs formats (ie. pdf, html, docx etc.)
 \item
   Can be read on any device with any operating system
 \item
   Many different web-applications and websites (ie. Reddit, GitHub) use it
 \end{itemize}
 
-In fact, when we think about best practices in science leveraging tools that allow for reproducibility and interoperability (they are independent of specific operating systems or programs for example), Markdown is an essential authoring tool.
+In fact, when we think about best practices in science leveraging tools that allow for reproducibility and interpretability (they are independent of specific operating systems or programs for example), Markdown is an essential authoring tool.
 
 To learn more about Markdown see Matt Cone's Markdown Guide \href{https://www.markdownguide.org/getting-started\#:~:text=Why\%20Use\%20Markdown\%3F\%201\%20Markdown\%20can\%20be\%20used,future\%20proof.\%20...\%205\%20Markdown\%20is\%20everywhere.\%20}{here}.
 
@@ -1614,6 +1626,8 @@ We'll just keep it simple for the moment; this is all you really need for your \
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
+\emph{Last updated 2021-08-10}
+
 This is a brief overview of the 7th edition of APA for quick reference. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consul the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
 Additional resources you may wish to consult include:
@@ -1712,6 +1726,8 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
+\emph{Last updated 2021-08-10}
+
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
 Learn more about academic integrity from the \href{https://learningcommons.ubc.ca/resource-guides/understand-academic-integrity/}{UBC Learning Commons}.
@@ -1719,12 +1735,16 @@ Learn more about academic integrity from the \href{https://learningcommons.ubc.c
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
+\emph{Last updated 2021-08-10}
+
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
 Learn more about copyright at UBC from the \href{https://learningcommons.ubc.ca/resource-guides/respect-copyright/}{UBC Learning Commons}.
 
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
+
+\emph{Last updated 2021-08-10}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
